<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">logo</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">Logo</string>
    <string name="logo">Logo</string>
    <string name="title_activity_menu">ZX Logo</string>
    <string name="action_settings">Settings</string>
    <string name="timeLabelText">"TIME "</string>
    <string name="title_activity_select_level">SelectLevel</string>
    <string name="select_level">Select Level</string>
    <string name="level_label">"LEVEL "</string>
    <string name="congratulation">Congratulations!</string>
    <string name="time_is_out">Time is out</string>
    <string name="clear_field">Restart</string>
    <string name="exit_game">Exit</string>
    <string name="music_on_off">Music</string>
    <string name="sound_on_off">Sound</string>
    <string name="play_button">Play</string>
    <string name="sel_level_butt">Levels</string>
    <string name="opt_menu_butt">Options</string>
    <string name="next_level">Level complete</string>



</resources>