<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@drawable/vground"
    tools:context="com.ldir.logo.activities.MenuActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:gravity="center_vertical|center_horizontal"
        android:layout_alignParentTop="false"
        android:layout_centerHorizontal="true">
        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <ImageView
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:id="@+id/imageView"
            android:src="@drawable/menu_logo"
            android:layout_gravity="center"
            android:contentDescription="@string/logo" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:baselineAligned="false">


            <Button
                android:onClick="onStartGame"
                android:text="@string/play_button"
                android:id="@+id/goButton"
                style="@style/menu_button"
                android:layout_gravity="center_horizontal" />

            <Button
                android:text="@string/sel_level_butt"
                style="@style/menu_button"
                android:onClick="onSelectLevels"
                android:id="@+id/levelsButton" />

            <Button
                style="@style/menu_button"
                android:text="@string/opt_menu_butt"
                android:onClick="onOptions"
                android:id="@+id/OptButton" />

    <!--
            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />
    -->
        </LinearLayout>
        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />
    </LinearLayout>

</RelativeLayout>
