<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="bottom"
    android:orientation="vertical"
    android:background="@drawable/vground"
    tools:context=".MainActivity" >

    <RelativeLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@+id/fieldSurface">

        <LinearLayout
            android:orientation="vertical"
            android:id="@+id/missin_pattern"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pattern_label"
                android:id="@+id/patternLabel"
                style="@style/game_text"
                android:paddingLeft="20dp" />

            <com.ldir.logo.fieldviews.LevelField
                android:id="@+id/misionView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_toRightOf="@+id/missin_pattern">

            <ImageView
                android:id="@+id/gamefieldLogo"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:contentDescription="@string/logo"
                android:src="@drawable/logo"
                android:layout_weight="1" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:paddingLeft="20dp">

                <TextView
                    android:text="@string/level_label"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/levelLabel"
                    style="@style/game_text"  />

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/timeLabelText"
                    android:id="@+id/timeLabel"
                    style="@style/game_text" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1"/>
                <ImageButton
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:id="@+id/optionsButton"
                    android:src="@drawable/opt"
                    android:scaleType="fitStart"
                    android:background="@null"
                    android:onClick="onOptionButton" />

                <ImageButton
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:id="@+id/undoButton"
                    android:src="@drawable/undo"
                    android:scaleType="fitStart"
                    android:background="@null"
                    android:onClick="onUndoButton" />

            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>

    <com.ldir.logo.fieldviews.GameField
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/fieldSurface"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="5dp" />

</RelativeLayout>